add getQrInfo and fix useQr
