# src/reservations/reservations.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Post, Body, Query, NotFoundException, BadRequestException, HttpCode, HttpStatus } from '@nestjs/common';
+import { Controller, Get, Post, Body, Query, NotFoundException, BadRequestException, HttpCode, HttpStatus, Param } from '@nestjs/common';
 import { ReservationsService } from './reservations.service';
 import { ApiBadRequestResponse, ApiNotFoundResponse, ApiOkResponse, ApiOperation, ApiParam, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { GetReservationsDto } from './dto/get-reservations.dto';
@@ -39,33 +39,20 @@ export class ReservationsController {
   @ApiParam({ name: 'id', description: 'Reservation Id' })
   async use(@Body() useReservationDto: UseReservationDto) {
     const { id } = useReservationDto;
-    const reservation = await this.reservationsService.findOne(id);
-    if(!reservation){
-      throw new NotFoundException('Reservation not found');
-    }
-    const usedAt = reservation.usedAt;
-    if(usedAt){
-      throw new BadRequestException({
-        ...useReservationErrors.ALREADY_USED,
-        message: 'La reserva fue usada el día ' + usedAt
-      });
-    }
-    const reservationDate = reservation.date.toString();
-    const reservationDateLuxon = DateTime.fromISO(reservationDate, {
-      zone: 'utc'
-    }).set({ hour: 0, minute: 0, second: 0, millisecond: 0 });
-    const todayLuxon = DateTime.now()
-    .setZone('utc')
-    .minus({hours: 5})
-    .set({ hour: 0, minute: 0, second: 0, millisecond: 0 });
-    const reservationInDate = reservationDateLuxon === todayLuxon;
-    console.log({reservationInDate})
-    if(!reservationInDate){
-      throw new BadRequestException({
-        ...useReservationErrors.DATE_NOT_VALID,
-        message: 'La fecha de la reserva es ' + reservationDate
-      });
+    //TODO: this is neccesary?
+    const reservationStatus = await this.reservationsService.getRevervationStatus(id);
+    if(!reservationStatus.isValid){
+      throw new BadRequestException(reservationStatus.error);
     }
     return this.reservationsService.use(id);
+  }
+
+  @ApiOperation({ summary: 'Get reservation qr info' })
+  @ApiOkResponse({ description: 'The reservation qr info has been successfully retrieved.'})
+  @ApiNotFoundResponse({ description: 'Reservation not found.'})
+  @Get(':id/qr-info')
+  @ApiParam({ name: 'id', description: 'Reservation Id' })
+  async getQrInfo(@Param('id') id: string) {
+    return this.reservationsService.getQrInfo(id);
   }
 }
